--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,14 +1,24 @@
 <h1>Editing Book</h1>
 
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
 
-  <h4>Title</h4>
+  <div class="field">Title</div>
   <%= f.text_field :title %>
-
-  <h4>Body</h4>
+  
+  <div class="field">Body</div>
   <%= f.text_area :body %>
 
-  <%= f.submit 'Update Book' %>
+  <div class="submit">
+  <%= f.submit 'Update Book' %></div>
 
 <% end %>
 
